Fixed horizontal lines, text alignment, and fonts.

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ html{
 
 body{
   margin: 0;
-  background: lightgreen;
+  background: white;
   display: flex;
   flex-direction: column;
   min-height:100vh;
@@ -127,7 +127,7 @@ nav a:hover {
 .img-container img {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 50%;
   margin: auto;
 }
 
@@ -139,25 +139,24 @@ main {
 /* START OF FOOTER */
 
 footer{
-  background-color: darkgray;
+  background-color: black;
+  padding-top: 5%;
+  padding-bottom: 10%;
 }
 
 .footercontainer{
-  color: black;
+  color: white;
   text-align: center;
  
 }
 
-
-
-
-
 .footer-cafe-name {
   text-align: center;
-  color: black;
+  color: white;
 }
 
 .social-media-btn{
+  color: white;
   display: flex;
   justify-content: center;
 }
@@ -266,7 +265,7 @@ i {
 .food-section{
   font-family:Montserrat;
   display:grid;
-  justify-items: center;
+  /* justify-items: left; */
   grid-template-columns: 1fr ;
   background-color:white;
   padding: 10px;
@@ -284,8 +283,7 @@ hr.menu {
 
 hr.double-horizontal {
   border: 3px solid black;
-  height: 1px;
-  width: 500px;
+  width: 100%;
 }
 
         
@@ -297,12 +295,19 @@ hr.double-horizontal {
 
 /* START OF HOURS AND LOCATION */
 
+section {
+  background-color: white;
+  padding-bottom: 5%;
+  padding-top: 5%;
+}
+
 .hours-location {
   margin-top: 50px;
   margin-bottom: 50px;
   width: 50%;
   margin: 0 auto;
   text-align: center;
+  font-family: Montserrat;
 }
 
 .food-title-menu {
@@ -310,13 +315,10 @@ hr.double-horizontal {
   color:black;
 }
 
+
 .location-hr {
-  border: none;
-  height: 3px;
-  background-color: black;
-  margin-bottom: 10px;
+  border: 3px solid black;
   width: 100%;
-  margin: 0 auto;
 }
 
 .second-container {
